Replace URL with URI where possible URL bad for anon and has traps like equals()